Tests with theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ layout: default
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
-        <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:400,700|Rubik:300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Merriweather:400,400i,700,700i&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
     </head>
     <body>
