--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,15 @@
 body {
     background: #fff;
     color: #444;
-    font-family: 'Frank Ruhl Libre', serif;
+    font-family: 'Merriweather', serif;
     font-weight: 400;
     margin: 0;
     padding: 0;
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Rubik', sans-serif;
-    font-weight: 300;
-    letter-spacing: .001rem;
-    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .bg-header {
@@ -58,4 +56,8 @@ h1, h2, h3, h4, h5 {
     .bg-home {
         min-height: 70vh;
     }
+}
+
+.bg-recipe .quantity {
+    font-family: 'IBM Plex Mono', monospace;
 }
