--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,12 @@ layout: default
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{ page.title }}</title>
+        <title>
+            {% if page.title %}
+                {{ page.title }} |
+            {% endif %}
+            Bagelis Fine Backery
+        </title>
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Merriweather:400,400i,700,700i&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
     </head>
