--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body {
     color: #444;
     font-family: 'Merriweather', serif;
     font-weight: 400;
+    line-height: 1.5;
     margin: 0;
     padding: 0;
 }
