--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="bg-home">
+<div class="bg-container bg-home">
     {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
     {%- endif -%}
@@ -14,7 +14,7 @@ layout: default
       {%- for post in site.posts -%}
       <li>
         <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
+          <span class="bullet">⟩</span> <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
         </h3>
