--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background: #fff;
     color: #444;
@@ -25,7 +29,7 @@ h1, h2, h3, h4, h5 {
 
 .bg-header h1 {
     color: #444;
-    font-size: 20px;
+    font-size: 22px;
     line-height: 40px;
     margin: 0;
     padding: 0;
@@ -43,6 +47,7 @@ h1, h2, h3, h4, h5 {
     }
 
     .bg-header h1 {
+        font-size: 26px;
         line-height: 60px;
     }
 }
@@ -69,8 +74,37 @@ h1, h2, h3, h4, h5 {
     height: auto;
     margin: 0 auto;
     max-width: 900px;
-    padding: 0 20px;
+    padding: 40px 20px;
     width: auto;
+}
+
+/* Home */
+
+.post-list,
+.post-list li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.post-list li {
+    margin-bottom: 20px;
+}
+
+.post-list h3 {
+    margin: 0;
+}
+
+.post-list a {
+    color: #444;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.post-list .bullet {
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 
