--- a/_layouts/Recipe.html
+++ b/_layouts/Recipe.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="bg-container bg-recipe">
-    <h1>{{ page.title }}</h1>
+    <h1><span class="bullet">⟩</span> {{ page.title }}</h1>
     
     {% if page.image != '' %}
     <div class="image">
