--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@ layout: default
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5,user-scalable=1">
         <title>
             {% if page.title %}
                 {{ page.title }} |
