--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ body {
 h1, h2, h3, h4, h5 {
     font-weight: 700;
     letter-spacing: 1px;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    font-size: 16px;
+    margin: 0 0 30px 0;
 }
 
 .bg-header {
@@ -31,8 +38,6 @@ h1, h2, h3, h4, h5 {
     color: rgb(200,0,0);
     font-size: 18px;
     line-height: 40px;
-    margin: 0;
-    padding: 0;
     text-align: left;
 }
 
@@ -135,8 +140,16 @@ h1, h2, h3, h4, h5 {
 
 .bg-recipe h1 {
     font-family: 'IBM Plex Mono', monospace;
+    font-size: 22px;
     letter-spacing: .25em;
+    margin: 0;
     text-transform: uppercase;
+}
+
+@media screen and (min-width:768px) {
+    .bg-recipe h1 {
+        font-size: 36px;
+    }
 }
 
 .bg-recipe h1 span {
@@ -144,18 +157,42 @@ h1, h2, h3, h4, h5 {
     display: inline-block;
 }
 
-.bg-recipe .image {
-    border-radius: 0 25vh 0 0;
+.bg-recipe .bg-image {
     display: block;
     height: 50vh;
     overflow: hidden;
+    position: relative;
     width: auto;
 }
 
-.bg-recipe .image img {
+.bg-recipe .bg-image .title {
+    background: linear-gradient(45deg, rgba(0,0,0,.5) 0%,rgba(0,0,0,0) 100%);
+    bottom: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+    z-index: 2;
+}
+
+.bg-recipe .bg-image .title h1 {
+    color: #fff;
+}
+
+.bg-recipe .bg-image img {
     display: block;
     height: 100%;
     object-fit: cover;
     object-position: center center;
+    width: 100%;
+}
+
+.bg-recipe .bg-image .bg-container {
+    flex: 0 0 auto;
+    max-width: 900px;
     width: 100%;
 }
