--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <header class="bg-header">
-    <h1><a href="{{ site.baseurl }}/">Bagelis Fine Backery</a></h1>
+    <h1><a href="{{ site.baseurl }}/">5 Onion St.</a></h1>
 </header>
