--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@ layout: default
             Bagelis Fine Backery
         </title>
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Merriweather:400,400i,700,700i&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
     </head>
     <body>
@@ -22,6 +23,15 @@ layout: default
         {{ content }}
 
         {% include footer.html %}
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-820272-4"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-820272-4');
+        </script>
         
     </body>
 </html>
