--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,15 +132,10 @@ p {
 
 /* Recipe */
 
-
-.bg-recipe .quantity {
-}
-
 .bg-recipe h1 {
     font-size: 22px;
     font-weight: 400;
-    margin: 0;
-    text-transform: uppercase;
+    margin-bottom: 30px;
 }
 
 @media screen and (min-width:768px) {
@@ -154,42 +149,7 @@ p {
     display: inline-block;
 }
 
-.bg-recipe .bg-image {
-    display: block;
-    height: 50vh;
-    overflow: hidden;
-    position: relative;
-    width: auto;
-}
-
-.bg-recipe .bg-image .title {
-    background: linear-gradient(45deg, rgba(0,0,0,.5) 0%,rgba(0,0,0,0) 100%);
-    bottom: 0;
-    display: flex;
-    flex-direction: column-reverse;
-    height: auto;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: auto;
-    z-index: 2;
-}
-
-.bg-recipe .bg-image .title h1 {
-    color: #fff;
-}
-
-.bg-recipe .bg-image img {
-    display: block;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
-    width: 100%;
-}
-
-.bg-recipe .bg-image .bg-container {
-    flex: 0 0 auto;
-    max-width: 900px;
-    width: 100%;
+.bg-recipe h2 {
+    font-weight: 400;
+    text-transform: uppercase;
 }
