--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: default
             {% if page.title %}
                 {{ page.title }} |
             {% endif %}
-            Bagelis Fine Backery
+            5 Onion St.
         </title>
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Merriweather:400,400i,700,700i&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap" rel="stylesheet">
