--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,8 @@ layout: default
             {% endif %}
             5 Onion St.
         </title>
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Merriweather:400,400i,700,700i&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
+        <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
     </head>
     <body>
         
