--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,41 @@ p:empty {
     margin-bottom: 60px;
 }
 
-.bg-recipe h3 {
+.bg-recipe .blocks > li ul {
+    margin-bottom: 30px;
+}
 
+.bg-recipe h3 {
+    margin-bottom: 0;
+}
+
+.bg-recipe .ingredients {
+    margin-bottom: 60px;
+}
+
+.bg-recipe .ingredients ul,
+.bg-recipe .ingredients li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.bg-recipe .ingredients li {
+    margin-bottom: 15px;
+}
+
+.bg-recipe .ingredients li .bullet {
+    color: rgb(200, 0, 0);
+    font-size: 50%;
+}
+
+.bg-recipe .ingredients li .notes {
+    background: rgba(255,255,255,.5);
+    border-left: 2px dotted #444;
+    margin: 15px 0 0 15px;
+    padding-left: 30px;
+}
+
+.bg-recipe .steps .blocks ul li {
+    margin-bottom: 15px;
 }
