--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,4 +22,9 @@ layout: default
       {%- endfor -%}
     </ul>
   {%- endif -%}
+
+  {% for category in site.categories %}
+      <h3>{{ category[0] }}</h3>
+    {% endfor %}
+  
 </div>
