--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,21 +10,29 @@ layout: default
 
 
     {%- if site.posts.size > 0 -%}
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        <h3>
-          <span class="bullet">⟩</span> <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        </li>
-      {%- endfor -%}
-    </ul>
-  {%- endif -%}
+      {%- for category in site.categories -%}
+        {%- if category[0] == 'Recipes' -%}
+          {% assign index = 0 %}
+        {% else if category[0] == 'Ingredients' %}
+          {% assign index = 1 %}
+        {% else if category[0] == 'Tools' %}
+          {% assign index = 1 %}
+        {%- endif -%}
 
-  {% for category in site.categories %}
-      <h3>{{ category[0] }}</h3>
-    {% endfor %}
   
+
+        <h2>{{ site.labels[index] }}</h2>
+        <ul class="post-list">
+          {%- for post in category[1] -%}
+            <li>
+              <h3>
+                <span class="bullet">⟩</span> <a class="post-link" href="{{ post.url | relative_url }}">
+                  {{ post.title | escape }}
+                </a>
+              </h3>
+            </li>
+          {%- endfor -%}
+        </ul>
+      {%- endfor -%}
+    {%- endif -%}
 </div>
