--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,19 @@ layout: default
             {% endif %}
             5 Onion St.
         </title>
+
+        {% if page.keywords %}
+        <meta name="keywords" content="{{page.keywords}}" />
+        {% else if site.keywords %}
+        <meta name="keywords" content="{{site.keywords}}" />
+        {% endif %}
+
+        {% if page.description %}
+        <meta name="description" content="{{page.description}}" />
+        {% else if site.keywords %}
+        <meta name="description" content="{{site.description}}" />
+        {% endif %}
+
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
     </head>
