--- a/_layouts/Recipe.html
+++ b/_layouts/Recipe.html
@@ -5,7 +5,7 @@ layout: default
     <h1><span class="bullet">⟩</span> {{ page.title }}</h1>
 
     <div class="description">
-        <p>{{ page.description | markdownify }}</p>
+        <p>{{ page.intro | markdownify }}</p>
     </div>
 
     <div class="ingredients">
